src/filewidgets/kfilewidget.cpp
@@ -166,7 +166,7 @@ public:
     void enterUrl(const QString &);
     void locationAccepted(const QString &);
     void slotFilterChanged();
-    void fileHighlighted(const KFileItem &);
+    void fileHighlighted(const KFileItem &, bool);
     void fileSelected(const KFileItem &);
     void slotLoadingFinished();
     void togglePlacesPanel(bool show, QObject *sender = nullptr);
@@ -908,13 +908,9 @@ void KFileWidget::accept()
     d->m_ops->close();
 }
 
-void KFileWidgetPrivate::fileHighlighted(const KFileItem &i)
+void KFileWidgetPrivate::fileHighlighted(const KFileItem &i, bool isKeyNavigation)
 {
     if ((m_locationEdit->hasFocus() && !m_locationEdit->currentText().isEmpty())) { // don't disturb
-        return;
-    }
-
-    if (!i.isNull() && i.isDir() && !(m_ops->mode() & KFile::Directory)) {
         return;
     }
 
@@ -947,7 +943,7 @@ void KFileWidgetPrivate::fileHighlighted(const KFileItem &i)
     // rename it if desired
     // Note that double-clicking will override this and overwrite regardless of
     // single/double click mouse setting (see slotViewDoubleClicked() )
-    if (m_operationMode == KFileWidget::Saving) {
+    if (!isKeyNavigation && m_operationMode == KFileWidget::Saving) {
         m_locationEdit->setFocus();
     }
 }
@@ -1101,8 +1097,8 @@ void KFileWidgetPrivate::initDirOpWidgets()
     q->connect(m_ops, &KDirOperator::urlEntered, q, [this](const QUrl &url) {
         urlEntered(url);
     });
-    q->connect(m_ops, &KDirOperator::fileHighlighted, q, [this](const KFileItem &item) {
-        fileHighlighted(item);
+    q->connect(m_ops, &KDirOperator::fileHighlighted, q, [this](const KFileItem &item, bool isKeyNavigation) {
+        fileHighlighted(item, isKeyNavigation);
     });
     q->connect(m_ops, &KDirOperator::fileSelected, q, [this](const KFileItem &item) {
         fileSelected(item);
